srcs/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql-image
        imagePullPolicy: Never
        volumeMounts:
        - name: telegraf-config
          mountPath: /etc/telegraf.conf
          subPath: telegraf.conf
        - name: mysql-config
          mountPath: /etc/my.cnf.d/mariadb-server.cnf
          subPath: mariadb-server.cnf
        - name: mysql-persistent-storage
          mountPath: /data
          subPath: mysql
      volumes:
      - name: telegraf-config
        configMap:
          name: telegraf-config
          items:
          - key: telegraf.conf
            path: telegraf.conf
      - name: mysql-config
        configMap:
          name: mysql-config
          items:
          - key: mysql.cnf
            path: mariadb-server.cnf
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
kind: Service
apiVersion: v1
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
  - name: mysql
    port: 3306
