srcs/ingress.yaml
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: nginx-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#spec:
#  template:
#    spec:
#      containers:
#      - name: nginx-ingress-controller
#        ports:
#        - containerPort: 20
#          hostPort: 20
#        - containerPort: 21
#          hostPort: 21
#        - containerPort: 22
#          hostPort: 22000
#spec:
#  backend:
#    serviceName: nginx
#    servicePort: 80
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 443
